--- a/index.html
+++ b/index.html
@@ -11,19 +11,14 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <h2>Peaches world</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem necessitatibus, dolorum dolores consectetur quia voluptatem quam eum? Enim id ad consequatur exercitationem est esse quae nulla, sit pariatur mollitia ducimus?</p>
-    <ul>
-        <li>fries</li>
-        <li>shake</li>
-        <li>burger</li>
-    </ul>
-    <form>
-        <label>Text Field</label>
-        <input type="text" placeholder="placeholder">
-        <input type="submit" value="click me">
-    </form>
+   
+    <div class="container" style="background: skyblue;">
+        <h1>Fixed Container</h1>
+    </div>
+
+    <div class="container-fluid" style="background: hotpink;">
+        <h1>Fluid Container</h1>
+    </div>
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
