--- a/index.html
+++ b/index.html
@@ -18,28 +18,20 @@
     <div class="container">
 
       <div class="row" style="background: hotpink;">
-        <div class="col-md-6">col-md-6</div>
-        <div class="col-md-6">col-md-6</div>
+        <div class="col-md">col-md</div>
+        <div class="col-md-8">col-md-6</div>
+        <div class="col-md">col-md</div>
       </div>
 
-      <div class="row" style="background: gold;">
-        <div class="col-md-6 col-lg-3">col-lg-3</div>
-        <div class="col-md-6 col-lg-3">col-lg-3</div>
-        <div class="col-md-6 col-lg-3">col-lg-3</div>
-        <div class="col-md-6 col-lg-3">col-lg-3</div>
-      </div>
-
-      <div class="row" style="background: skyblue;">
-        <div class="col-3">col-3</div>
-        <div class="col-3">col-3</div>
-        <div class="col-3">col-3</div>
-        <div class="col-3">col-3</div>
+      <div class="row justify-content-md-center">
+        <div class="col-md-2 order-3">1 col-md-2</div>
+        <div class="col-md-2 order-1">2 col-md-2</div>
+        <div class="col-md-2 order-2">3 col-md-2</div>
       </div>
 
     </div>
-    <div class="container-fluid text-white" style="background: tomato;">
-        <p>hi</p>
-    </div>
+
+
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
