--- a/index.html
+++ b/index.html
@@ -8,27 +8,16 @@
 
      <!-- Bootstrap CSS -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-     <style>
-         .row div{padding: 20px 10px; border: 1px solid;}
-     </style>
+     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
    
-    <div class="container">
 
-      <div class="row" style="background: hotpink;">
-        <div class="col-md">col-md</div>
-        <div class="col-md-8">col-md-6</div>
-        <div class="col-md">col-md</div>
-      </div>
-
-      <div class="row justify-content-md-center">
-        <div class="col-md-2 order-3">1 col-md-2</div>
-        <div class="col-md-2 order-1">2 col-md-2</div>
-        <div class="col-md-2 order-2">3 col-md-2</div>
-      </div>
-
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container text-center">
+            <h1>Queen Peach</h1>
+            <p>Guess who's back...</p>
+        </div>
     </div>
 
 
