--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body>
    
 
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid bg-warning text-white">
         <div class="container text-center">
-            <h1>Queen Peach</h1>
-            <p>Guess who's back...</p>
+            <h1 class="display-1">Queen Peach</h1>
+            <p class="lead">Guess who's back...</p>
         </div>
     </div>
 
