--- a/index.html
+++ b/index.html
@@ -20,6 +20,50 @@
         </div>
     </div>
 
+    <div class="container text-muted">
+        <!-- cards -->
+
+        <div class="row">
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="./img/rain.jpg"class="card-img-top img-fluid" style="height: 200px;">
+                    <div class="card-body">
+                        <h3 class="card-title">Rain</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio inventore</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="./img/round.jpg"class="card-img-top img-fluid" style="height: 200px;">
+                    <div class="card-body">
+                        <h3 class="card-title">Round</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio inventore</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="./img/air.jpg"class="card-img-top img-fluid" style="height: 200px;">
+                    <div class="card-body">
+                        <h3 class="card-title">Air</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio inventore</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="./img/earth.jpg"class="card-img-top img-fluid" style="height: 200px;">
+                    <div class="card-body">
+                        <h3 class="card-title">Earth</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio inventore</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
