--- a/index.html
+++ b/index.html
@@ -62,6 +62,36 @@
             </div>
         </div>
 
+        <!-- cards end -->
+
+
+        <h2 class="display-4 text-center py-5 my-4">Meet the Speakers</h2>
+        <nav class="nav justify-content-center nav-pills flex-column flex-md-row">
+            <a class="nav-link active" href="#peach" data-toggle="tab">Queen Peach</a>
+            <a class="nav-link" href="#mario" data-toggle="tab">Mario</a>
+            <a class="nav-link" href="#luigi" data-toggle="tab">Good ol' Luigi</a>
+            <a class="nav-link" href="#toad" data-toggle="tab">Toad</a>
+        </nav>
+
+        <div class="tab-content py-5">
+            <div class="tab-pane active" id="peach">
+                <h3>Queen Peach</h3>
+                <p>Hola I'm Peach, the best peach there is.</p>
+            </div>
+            <div class="tab-pane" id="mario">
+                <h3>Mario</h3>
+                <p>Hola I'm Mario, the best Mario there is.</p>
+            </div>
+            <div class="tab-pane" id="luigi">
+                <h3>Good ol' Luigi</h3>
+                <p>Hola I'm Luigi, the best Luigi there is.</p>
+            </div>
+            <div class="tab-pane" id="toad">
+                <h3>Toad</h3>
+                <p>Hola I'm Toad, the best Toad there is.</p>
+            </div>
+        </div>
+
     </div>
 
 
