--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
   </head>
   <body>
    
+    <nav class="navbar navbar-expand-sm bg-warning">
+        <div class="container">
+            <button class="navbar-toggler bg-light" data-toggle="collapse" data-target="#mainNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainNav">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active text-white" href="#" >Home</a>
+                    <a class="nav-item nav-link text-white" href="#" >About</a>
+                    <a class="nav-item nav-link text-white" href="#" >Training</a>
+                    <a class="nav-item nav-link text-white" href="#" >Contact</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <div class="jumbotron jumbotron-fluid bg-warning text-white">
         <div class="container text-center">
